test/expected/bogus_path_escaped.out
[CompoundList]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "data/*/*"]
[Word
  Unquoted "echo"
]
[Word
  Unquoted "data/*/"
  Literal "*"
]
shit: 2:6: error: The glob pattern 'data/*/*' matched no file, it expands to its literal text, which is rarely intended. Probe for matches with compgen -G 'data/*/*' or relax with set +o failglob.
     2 |  echo data/*/\*
       |       ^~~~~~~~~ here.
